--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sgy/example-cli",
+  "name": "@sgy/ts-cli-base",
   "version": "0.1.0",
   "description": "Typescript Example CLI with yargs",
   "main": "index.js",
@@ -12,13 +12,19 @@
     "start": "tsc && node ./dist/index.js",
     "test": "jest"
   },
-  "author": "",
+  "author": {
+    "name": "sgyio",
+    "email": "sgy@sgy.io",
+    "url": "https://github.com/sgyio"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sgyio/ts-cli-base"
+  },
   "license": "MIT",
   "dependencies": {
     "chalk": "^2.4.1",
-    "firebase-admin": "^6.0.0",
     "inversify": "^4.13.0",
-    "randomstring": "^1.1.5",
     "reflect-metadata": "^0.1.12",
     "yargs": "^12.0.2"
   },
@@ -27,8 +33,11 @@
     "@types/jest": "^23.3.5",
     "@types/node": "^10.11.7",
     "@types/yargs": "^12.0.1",
-    "jest": "^23.6.0",
-    "ts-jest": "^23.10.4",
+    "ajv": "^6.9.1",
+    "ajv-keywords": "^3.2.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "jest": "^24.1.0",
+    "ts-jest": "^23.1.4",
     "tslint": "^5.11.0",
     "typescript": "^3.1.3"
   },
