--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@sgy/ts-cli-base",
   "version": "0.1.0",
+  "private": true,
   "description": "Typescript Example CLI with yargs",
   "main": "index.js",
   "bin": {
@@ -29,16 +30,23 @@
     "yargs": "^12.0.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@types/chalk": "^2.2.0",
     "@types/jest": "^23.3.5",
     "@types/node": "^10.11.7",
     "@types/yargs": "^12.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
     "ajv": "^6.9.1",
     "ajv-keywords": "^3.2.0",
     "babel-core": "^7.0.0-bridge.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "husky": "^4.2.1",
     "jest": "^24.1.0",
     "ts-jest": "^23.1.4",
-    "tslint": "^5.11.0",
     "typescript": "^3.1.3"
   },
   "jest": {
